# rust-ecosystem

./: Cargo.toml  README.md  cliff.toml
assets/rest/: test.rest
assets/sql/: urls.sql
examples/: chat_client.rs  chat_server.rs  url_shortener.rs
