[package]
name = "rust-ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.83"
dashmap = "6.0.1"
tokio = { version = "1", features = ["net", "io-util", "rt", "tokio-macros", "sync", "macros", "rt-multi-thread", "io-std"] }
bytes = "1.6.0"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = { version = "0.3.30", default-features = true }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
console-subscriber = "0.3.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "any", "postgres"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
nanoid = "0.4.0"
async-recursion = "1.1.1"
